--- a/smartalarm/src/app/alarm-item/alarm-item.component.html
+++ b/smartalarm/src/app/alarm-item/alarm-item.component.html
@@ -52,5 +52,5 @@
     </ion-select>
   </ion-item>
 
-  <ion-button expand="full" color="danger" (click)="deleteAlarm()">Delete Alarm</ion-button>
+  <ion-button class="delete" expand="full" (click)="deleteAlarm()">Delete Alarm</ion-button>
 </ion-content>
