--- a/smartalarm/src/app/home/home.page.scss
+++ b/smartalarm/src/app/home/home.page.scss
@@ -3,6 +3,11 @@ ion-item {
     --color: white;
     font-size: 1.2rem;
   }
+
+  ion-item:hover,ion-item:focus
+  {
+    --color: white;
+  }
   
   ion-toggle {
     --handle-background: white;
