--- a/src/app/alarm/alarm.component.html
+++ b/src/app/alarm/alarm.component.html
@@ -1,141 +1,162 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Alarm</ion-title>
+    <ion-title>Alarms</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="section">
-    <h2>Active</h2>
+    <h2>Active Alarms</h2>
     <ng-container *ngFor="let alarm of activeAlarms">
       <ng-container *ngTemplateOutlet="alarmItemTemplate; context: { alarm: alarm }"></ng-container>
     </ng-container>
   </div>
 
-  <div class="section">
-    <h2>Others</h2>
-    <ng-container *ngFor="let alarm of otherAlarms">
-      <ng-container *ngTemplateOutlet="alarmItemTemplate; context: { alarm: alarm }"></ng-container>
-    </ng-container>
-  </div>
+ 
 
   <ng-template #alarmItemTemplate let-alarm="alarm">
-    <div class="alarm-card">
-      <div class="alarm-header">
-        <div>
-          <!-- Label Section -->
-          <div class="label" (click)="startEditing(alarm)">
-            <ng-container *ngIf="currentlyEditingId !== alarm.id">
-              {{ alarm.label || '+ Add Label' }}
-            </ng-container>
+    <ion-item-sliding>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="deleteAlarm(alarm)">
+          <ion-icon name="trash-outline"></ion-icon> Delete
+        </ion-item-option>
+      </ion-item-options>
+
+      <ion-item>
+        <div class="alarm-card">
+          <div class="alarm-header">
+            <div>
+              <div class="label" (click)="startEditing(alarm)">
+                <ng-container *ngIf="currentlyEditingId !== alarm.id">
+                  {{ alarm.label || '+ Add Label' }}
+                </ng-container>
+              </div>
+
+              <input
+                *ngIf="currentlyEditingId === alarm.id"
+                [(ngModel)]="newLabel"
+                (blur)="saveLabel(alarm)"
+                (keyup.enter)="saveLabel(alarm)"
+                class="label-input"
+                placeholder="Enter label"
+                autofocus
+              />
+
+        
+              <div class="time" (click)="startEditingTime(alarm)">
+                <ng-container *ngIf="currentlyEditingTimeId !== alarm.id">
+                  {{ alarm.time }}
+                </ng-container>
+              </div>
+
+              <div *ngIf="currentlyEditingTimeId === alarm.id">
+                <ion-datetime
+                  [(ngModel)]="newTime"
+                  (ionChange)="updateTime($event)"
+                  class="time-picker"
+                  presentation="time"
+                  hour-cycle="h12"
+                  [value]="alarm.time"
+                ></ion-datetime>
+                <ion-button (click)="saveTime(alarm)" expand="block" color="primary" size="small">
+                  Save
+                </ion-button>
+                <ion-button (click)="cancelTimeEditing(alarm)" expand="block" color="medium" size="small">
+                  Cancel
+                </ion-button>
+              </div>
+
+              <div class="days">{{ alarm.days.join(', ') }}</div>
+            </div>
+
+            <div class="right">
+              <ion-toggle
+                [checked]="isAlarmEnabled[alarm.id]"
+                (ionChange)="onToggleChange(alarm, $event)"
+                color="danger"
+                size="small"
+              ></ion-toggle>
+              <ion-icon name="chevron-down-outline" (click)="toggleOptions(alarm.id)"></ion-icon>
+            </div>
           </div>
-          
-          <input
-            *ngIf="currentlyEditingId === alarm.id"
-            [(ngModel)]="newLabel"
-            (blur)="saveLabel(alarm)"
-            (keyup.enter)="saveLabel(alarm)"
-            class="label-input"
-            placeholder="Enter label"
-            autofocus
-          />
 
-          <!-- Time Section -->
-          <div class="time" (click)="startEditingTime(alarm)">
-            <ng-container *ngIf="currentlyEditingTimeId !== alarm.id">
-              {{ alarm.time }}
-            </ng-container>
+      
+          <div *ngIf="selectedAlarmId === alarm.id" class="options">
+            <div class="day-buttons">
+              <button
+                *ngFor="let day of dayOptions"
+                (click)="toggleDay(alarm, day)"
+                [class.active]="alarm.days?.includes(day)"
+                class="day-btn"
+              >
+                {{ day.charAt(0) }}
+              </button>
+            </div>
+
+            <ion-item button (click)="openSoundPicker(alarm)" lines="none">
+              <ion-label>Ringtone</ion-label>
+              <ion-note slot="end">{{ getSoundName(alarm.sound) || 'Select Sound' }}</ion-note>
+            </ion-item>
+            <ion-item lines="none">
+              <ion-label>Notification</ion-label>
+              <ion-checkbox></ion-checkbox>
+            </ion-item>
+            <ion-item lines="none">
+              <ion-label>Vibrate</ion-label>
+              <ion-checkbox></ion-checkbox>
+            </ion-item>
+            <ion-item lines="none">
+              <ion-label>Snooze Duration</ion-label>
+              <ion-checkbox></ion-checkbox>
+            </ion-item>
           </div>
-
-          <div *ngIf="currentlyEditingTimeId === alarm.id">
-            <ion-datetime
-              [(ngModel)]="newTime"
-              (ionChange)="updateTime($event)"
-              class="time-picker"
-              presentation="time"
-              hour-cycle="h12"
-              [value]="alarm.time"
-            ></ion-datetime>
-            <ion-button (click)="saveTime(alarm)" expand="block" color="primary" size="small">
-              Save
-            </ion-button>
-            <ion-button (click)="cancelTimeEditing(alarm)" expand="block" color="medium" size="small">
-              Cancel
-            </ion-button>
-          </div>
-
-          <div class="days">{{ alarm.days.join(', ') }}</div>
         </div>
-
-        <!-- Toggle & Options Icon -->
-        <div class="right">
-          <ion-toggle 
-            [checked]="isAlarmEnabled[alarm.id]" 
-            (ionChange)="onToggleChange(alarm, $event)" 
-            color="danger" 
-            size="small">
-          </ion-toggle>
-          <ion-icon name="chevron-down-outline" (click)="toggleOptions(alarm.id)"></ion-icon>
-        </div>
-      </div>
-
-      <!-- Options Panel -->
-      <div *ngIf="selectedAlarmId === alarm.id" class="options">
-        <div class="day-buttons">
-          <button
-            *ngFor="let day of dayOptions"
-            (click)="toggleDay(alarm, day)"
-            [class.active]="alarm.days?.includes(day)"
-            class="day-btn"
-          >
-            {{ day.charAt(0) }}
-          </button>
-        </div>
-
-        <ion-item button (click)="openSoundPicker(alarm)" lines="none">
-          <ion-label>Ringtone</ion-label>
-          <ion-note slot="end">{{ getSoundName(alarm.sound) || 'Select Sound' }}</ion-note>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label>Notification</ion-label>
-          <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label>Vibrate</ion-label>
-          <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label>Snooze Duration</ion-label>
-          <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label>Delete</ion-label>
-          <ion-icon slot="end" name="trash"></ion-icon>
-        </ion-item>
-      </div>
-    </div>
+      </ion-item>
+    </ion-item-sliding>
   </ng-template>
 
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button color="danger">
+    <ion-fab-button color="danger" (click)="openAddAlarmModal()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
-  <ion-footer>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-button>
-          <ion-icon name="settings-outline"></ion-icon>
-          Settings
-        </ion-button>
-      </ion-buttons>
-      <ion-buttons slot="end">
-        <ion-button>
-          <ion-icon name="notifications-outline"></ion-icon>
-          Notifications
-        </ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-footer>
+  <div class="add-alarm-modal" *ngIf="isAddAlarmModalOpen">
+    <div class="modal-content">
+      <h3>Add New Alarm</h3>
+      <ion-item>
+        <ion-label position="stacked">Time</ion-label>
+        <ion-datetime  presentation="time"  hour-cycle="h12" [(ngModel)]="newAlarmTime"></ion-datetime>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Label</ion-label>
+        <ion-input [(ngModel)]="newAlarmLabel" placeholder="Enter alarm label"></ion-input>
+      </ion-item>
+      <div class="modal-actions">
+        <ion-button color="primary" (click)="saveNewAlarm()">Save</ion-button>
+        <ion-button color="medium" (click)="closeAddAlarmModal()">Cancel</ion-button>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="blur-background" *ngIf="isAddAlarmModalOpen"></div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="light">
+    <ion-buttons slot="start">
+      <ion-button (click)="onSettings()">
+        <ion-icon slot="start" name="settings-outline"></ion-icon>
+        Settings
+      </ion-button>
+    </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="onNotifications()">
+        <ion-icon slot="start" name="notifications-outline"></ion-icon>
+        Notifications
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
