--- a/src/app/alarm/alarm.component.scss
+++ b/src/app/alarm/alarm.component.scss
@@ -155,3 +155,13 @@ ion-footer {
     font-size: 20px;
   }
 }
+ion-list-header {
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+ion-item {
+  --padding-start: 16px;
+  --inner-padding-end: 16px;
+}
